# crossmath_layout

./: .gitignore  RAEDME.md  README.md  pyproject.toml
src/crossmath_layout/: __init__.py  circle_block_count_extractor.py  cross_point_analyzer.py  equation_layout_builder.py  layout_analyzer.py  layout_checker.py  layout_generator.py  models.py  placement_generator.py
src/crossmath_layout/common/: generic_search.py
src/crossmath_layout/graph/: edge.py  graph.py
src/crossmath_layout/main/: generator_layout.py
src/crossmath_layout/utils/: RAEDME.md  dynamic_total_progress.py  time_formatter.py  viewer.py
